// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YoastBaseButton executes callback 1`] = `
<button
  className="sc-bdVaJa jIFifk"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`YoastBaseButton executes callback 2`] = `
<button
  className="sc-bdVaJa jIFifk"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the YoastBaseButton matches the snapshot 1`] = `
<button
  className="sc-bdVaJa jIFifk"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the YoastButton executes callback 1`] = `
<button
  className="sc-bwzfXH evZibj sc-bdVaJa jIFifk"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the YoastButton executes callback 2`] = `
<button
  className="sc-bwzfXH evZibj sc-bdVaJa jIFifk"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the YoastButton matches the snapshot 1`] = `
<button
  className="sc-bwzfXH gkvUVS sc-bdVaJa jIFifk"
  type="button"
>
  ButtonValue
</button>
`;
